--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,10 @@ width = 500
 height = 480
 show_hitboxes = False
 fps = 60
+left_bound_scale = 0.11
+top_bound_scale = 0.219
+bottom_bound_scale = 0.771
+right_bound_scale = 0.88
 
 [paths]
 sprites = sprites
