added rock collision

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [settings]
 width = 640
 height = 400
-show_hitboxes = False
+show_hitboxes = True
 fps = 60
 left_bound_scale = 0.11
 top_bound_scale = 0.18
