fixed show_hitboxes and added text

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [settings]
 width = 640
 height = 400
-show_hitboxes = True
+show_hitboxes = False
 fps = 60
 left_bound_scale = 0.11
 top_bound_scale = 0.18
@@ -17,5 +17,5 @@ tears = ${sprites}/tears
 [costumes]
 
 [game]
-best_time = 30
+best_time = 6.017
 
