--- a/config.ini
+++ b/config.ini
@@ -3,10 +3,11 @@ width = 640
 height = 400
 show_hitboxes = False
 fps = 60
-left_bound_scale = 0.11
-top_bound_scale = 0.18
+left_bound_scale = 0.115
+right_bound_scale = 0.885
+top_bound_scale = 0.19
 bottom_bound_scale = 0.771
-right_bound_scale = 0.89
+enemy_num = 3
 
 [paths]
 sprites = sprites
@@ -17,5 +18,5 @@ tears = ${sprites}/tears
 [costumes]
 
 [game]
-best_time = 9.9
+best_time = 5.27
 
